// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar favorites action - lifecycle should update when number exceeds maximum 1`] = `
<FavoritesIconBadge
  favoritesCount={9999}
  widgetSettings={
    Object {
      "showCounter": true,
    }
  }
>
  <div
    className="css-p6tvz theme__tab-bar__favorites-icon-badge theme__badge"
  >
    999+
  </div>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action - lifecycle should update when number is changed 1`] = `
<FavoritesIconBadge
  favoritesCount={99}
  widgetSettings={
    Object {
      "showCounter": true,
    }
  }
>
  <div
    className="css-p6tvz theme__tab-bar__favorites-icon-badge theme__badge"
  >
    99
  </div>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action should render exact number 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <WithWidgetSettings(Connect(FavoritesIconBadge))>
    <Connect(FavoritesIconBadge)
      widgetSettings={Object {}}
    >
      <FavoritesIconBadge
        dispatch={[Function]}
        favoritesCount={1}
        widgetSettings={Object {}}
      >
        <div
          className="css-p6tvz theme__tab-bar__favorites-icon-badge theme__badge"
        >
          1
        </div>
      </FavoritesIconBadge>
    </Connect(FavoritesIconBadge)>
  </WithWidgetSettings(Connect(FavoritesIconBadge))>
</Provider>
`;
